# new_rpi

./: README.md
drive/DrRobotMotionSensorDriver-master/: CMakeLists.txt
drive/DrRobotMotionSensorDriver-master/src/: DrRobotMotionSensorDriver.cpp
drive/drrobotV2_player-master/: CMakeLists.txt
drive/drrobotV2_player-master/src/: drrobot_imu.cpp  drrobot_player.cpp
drive/jaguar_control/: CMakeLists.txt  package.xml
drive/jaguar_control/config/: parameters.yaml  rover_parameters.yaml
drive/jaguar_control/include/: commons.cpp  matplotlibcpp.h  path_plotter.cpp  path_plotter.h  path_segment.h  survey_path_generator.cpp  survey_path_generator.h
drive/jaguar_control/launch/: manual.launch  rpi.launch  sim_jaguar_control.launch  telem.launch  usb_pixhawk.launch
drive/jaguar_control/src/: drive_path_follower.cpp  go_to_target.cpp  manual_controller.cpp  sim_drive_path_follower.cpp
fly/fiducials-kinetic-devel/aruco_detect/launch/: aruco_detect.launch
fly/fiducials/aruco_detect/launch/: aruco_detect.launch
fly/fly_control/: CMakeLists.txt  package.xml
fly/fly_control/config/: c.txt  co.txt  coordinates.txt  drone_parameters.yaml  local_coordinates.txt  parameters.yaml
fly/fly_control/include/: commons.cpp  commons.h  path_segment.cpp  survey_path_generator.cpp  survey_path_generator.h
fly/fly_control/launch/: fly_control.launch  fly_control_rpi.launch  parameter.launch  parameter_load.launch  sim_fly_control.launch
fly/fly_control/src/: camera_trig.cpp  error_plotter.cpp  fly_path_follower.cpp  land.cpp  pose_plotter.cpp  sim_camera_trig.cpp  sim_fly_path_follower.cpp  test_global_path.cpp  test_local_path.cpp  tester.cpp
fly/fly_msgs/: CMakeLists.txt  package.xml
fly/fly_msgs/msg/: Arc.msg  Line.msg  Path.msg
